--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -40,19 +40,26 @@
             %li= link_to "Link1", "/path1"
             %li= link_to "Link2", "/path2"
             %li= link_to "Link3", "/path3"
+            - if logged_in?
+              %li= link_to current_user.name
+              %li= link_to "ログアウト", session_path, method: :delete
+            - elsif navigate_login?
+              %li= link_to "login", new_session_path
+
+
     .container
       .row
         .col-lg-9
           = bootstrap_flash
           = yield
         .col-lg-3
-          .well.sidebar-nav
-            %h3 Sidebar
-            %ul.nav.nav-list
-              %li.nav-header Sidebar
-              %li= link_to "Link1", "/path1"
-              %li= link_to "Link2", "/path2"
-              %li= link_to "Link3", "/path3"
+          -# .well.sidebar-nav
+          -#   %h3 Sidebar
+          -#   %ul.nav.nav-list
+          -#     %li.nav-header Sidebar
+          -#     %li= link_to "Link1", "/path1"
+          -#     %li= link_to "Link2", "/path2"
+          -#     %li= link_to "Link3", "/path3"
           / /.well
         / /span
       / /row
