--- a/app/views/memos/index.html.haml
+++ b/app/views/memos/index.html.haml
@@ -19,6 +19,16 @@
         %td
           = link_to t('.show',    default: t("helpers.links.show")),    memo_path(memo),      class: 'btn btn-default btn-xs'
           = link_to t('.edit',    default: t("helpers.links.edit")),    edit_memo_path(memo), class: 'btn btn-default btn-xs'
-          = link_to t('.destroy', default: t("helpers.links.destroy")), memo_path(memo), method: :delete, data: { confirm: t('.confirm', default: t("helpers.links.confirm", default: 'Are you sure?')) }, class: 'btn btn-xs btn-danger'                                                                            |
+          = link_to t('.destroy', default: t("helpers.links.destroy")), memo_path(memo), method: :delete, data: { confirm: t('.confirm', default: t("helpers.links.confirm", default: 'Are you sure?')) }, class: 'btn btn-xs btn-danger'
+          = link_to t('.publish', default: t("helpers.links.publish")), memo_publication_path(memo), method: :post
 
 = link_to t('.new', default: t("helpers.links.new")), new_memo_path, class: 'btn btn-primary'
+
+%table.table.table-striped
+  %thead
+  %tr
+  %th= model_class.human_attribute_name(:id)
+  %th= model_class.human_attribute_name(:title)
+  %th= model_class.human_attribute_name(:body)
+  %th= model_class.human_attribute_name(:created_at)
+  %th= t '.actions', default: t("helpers.actions")
